--- a/Server/package.json
+++ b/Server/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "Michal Slezak",
+  "author": "MSiorr",
   "license": "ISC",
   "dependencies": {
     "formidable": "^2.0.1",
