--- a/Client/package.json
+++ b/Client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "author": "MSiorr",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
